--- a/src/App.css
+++ b/src/App.css
@@ -21,6 +21,10 @@ ul {
   list-style: none;
 }
 
+h1 {
+  font-size: 2.4em;
+}
+
 p {
   margin: 5px 0;
 }
@@ -74,6 +78,12 @@ input[type="number"] {
 
 .suggestions > li:hover {
   background-color: #5BA9A6;
+}
+
+#number-of-events {
+  display: flex;
+  flex-direction: column;
+  align-items: center; 
 }
 
 .event {
